@@ -1,5 +1,15 @@
 2020-08-11 Sergey Belyashov <sergey.belyashov@gmail.com>
 
+	* device/lib/tlcs90/abs.s,
+	  device/lib/tlcs90/memcpy.s,
+	  device/lib/tlcs90/memmove.s,
+	  device/lib/tlcs90/setjmp.s,
+	  device/lib/tlcs90/strcpy.s,
+	  device/lib/tlcs90/strlen.s:
+	  Small stdlib optimizations for tlcs90.
+
+2020-08-11 Sergey Belyashov <sergey.belyashov@gmail.com>
+
 	* device/lib/r2k/atomic_flag_test_and_set.s,
 	  device/lib/r3ka/atomic_flag_test_and_set.s:
 	  Optimize atomic_flag_test_and_set() for r2k and r3ka.
